<resources>
    <string name="app_name">LFM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">[web_client_id]</string>
    <string name="search_btn">Search_btn</string>
    <string name="search_a_product">Search a product</string>
    <string name="home">Home</string>
    <string name="main_viewpager">main_viewpager</string>
    <string name="my_cart">My Cart</string>
    <string name="cart_imageview">cart_imageview</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="gsignin_imageview">gsignin_imageview</string>
    <string name="sign_in">SIGN IN</string>
    <string name="bottomdesign_imageview">bottomdesign_imageview</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="shopping_cart_imageview">shopping_cart_imageview</string>
    <string name="_1">1</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="bottom_design_imageview">bottom_design_imageview</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login_now">LOGIN NOW</string>
    <string name="report_a_product">Report a product</string>
    <string name="product_name">Product Name</string>
    <string name="your_email_address">Your email address</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="describe_the_issue">Describe the issue</string>
    <string name="report">Report</string>
    <string name="harvested_with">Harvested with ❤</string>
    <string name="productimage_imageview">productImage_imageview</string>
    <string name="rs_200">Rs 200</string>
    <string name="pimage_imageview">pImage_imageview</string>
    <string name="product_description">Product Description</string>
    <string name="rs_250">Rs 250</string>
    <string name="likebtn_imageview">likeBtn_imageview</string>
    <string name="sharebtn_imageview">shareBtn_imageview</string>
    <string name="category">category</string>
    <string name="bannerhome_imageview">bannerHome_imageview</string>
    <string name="near_you">Near You</string>
    <string name="sign_in_to_know_trendingproducts_near_you">Sign in to know products near you</string>
    <string name="categories_you_may_like">Categories you may like</string>
    <string name="trending_up_imageview">trending_up_imageview</string>
    <string name="trending">Trending</string>
    <string name="products">Products</string>
    <string name="deals_of_the_day">Deals of the day</string>
    <string name="view_all">View all</string>
    <string name="midbanner_imageview">midBanner_imageview</string>
    <string name="support_the_locals">Support the locals</string>
    <string name="history_imageview">history_imageview</string>
    <string name="recently_viewed_products">Recently Viewed Products</string>
    <string name="clear">Clear</string>
    <string name="empty_imageview">empty_imageview</string>
    <string name="no_recent_product_viewed">No Recent Product Viewed</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_campaigns">My Campaigns</string>
    <string name="app_settings">App Settings</string>
    <string name="logout">Logout</string>
    <string name="from_history">From History</string>
    <string name="mainimage_imageview">mainImage_imageview</string>
    <string name="item_name">Item Name</string>
    <string name="like_imageview">like_imageview</string>
    <string name="buy_now">Buy Now</string>
    <string name="img1_imageview">img1_imageview</string>
    <string name="amazon_imageview">amazon_imageview</string>
    <string name="shopicon_imageview">shopIcon_imageview</string>
    <string name="description">Description</string>
    <string name="report_this_product">Report this product</string>
    <string name="in_case_of_any_type_of_complain_aganist_the_product_contact_us_immediately_in_case_product_found_faulty_it_will_be_removed_immediately">In case of any type of complain aganist the product contact us immediately. In case product found faulty, It will be removed immediately.</string>
    <string name="search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="login">Login</string>
    <string name="account_details">Account Details</string>
    <string name="display_name">Display Name</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="billing_details">Billing Details</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
</resources>