<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/register"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/name"
            android:padding="18dp"
            android:textSize="15sp"
            android:autofillHints="name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textSize="15sp"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/sign_up"
            android:textColor="#eeeeee" />

        <androidx.cardview.widget.CardView
            android:id="@+id/googleRegBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="60dp"
            app:cardCornerRadius="20dp"
            android:textColor="@color/white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_toStartOf="@+id/gReg"
                    android:layout_centerVertical="true"
                    android:src="@drawable/gsignin"
                    android:contentDescription="@string/gsignin_imageview" />
                <TextView
                    android:id="@+id/gReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:textColor="@color/orange"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-150dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/bottom_design"
            android:contentDescription="@string/bottom_design_imageview" />

        <RelativeLayout
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="#eeeeee" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/century_bold"
                android:text="@string/login_now"
                android:textColor="#eeeeee" />
        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>