<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E3E3E3"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/linearLayout"
        android:textColor="@color/orange"
        android:text="@string/welcome_back"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:padding="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:background="@drawable/edittext_bg"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:padding="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:background="@drawable/edittext_bg"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
             />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="#eeeeee"
            android:background="@drawable/button_bg"
            android:text="@string/log_in"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/googleSignInBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="60dp"
            app:cardCornerRadius="20dp"
            android:textColor="@color/white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_toStartOf="@+id/gSignin"
                    android:layout_centerVertical="true"
                    android:src="@drawable/gsignin"
                    android:contentDescription="@string/gsignin_imageview" />
                <TextView
                    android:id="@+id/gSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:textColor="@color/orange"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-150dp"
        android:layout_height="300dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/bottom_design"
            android:contentDescription="@string/bottomdesign_imageview" />
        <RelativeLayout
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textColor="#eeeeee" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#eeeeee"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/txt1"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/century_bold"
                android:text="@string/register_now"/>
        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>