<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReportActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="#EE5111FF"
            android:id="@+id/txt3"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:text="@string/report_a_product"
                android:textColor="#eee"
                android:fontFamily="@font/nunito_bold"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/txt3"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/pName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bg"
                android:padding="15dp"
                android:fontFamily="@font/nunito_bold"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/product_name"/>

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bg"
                android:padding="15dp"
                android:inputType="textEmailAddress"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:hint="@string/your_email_address"
                android:autofillHints="emailAddress" />
            <TextView
                android:id="@+id/emailError"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:textColor="#EE1111"
                android:layout_marginBottom="10dp"
                android:text="@string/please_enter_your_email_address"/>

            <EditText
                android:id="@+id/issue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox_bg"
                android:padding="15dp"
                android:maxLines="10"
                android:inputType="textMultiLine"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:hint="@string/describe_the_issue"/>


            <Button
                android:id="@+id/reportBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:layout_marginTop="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textColor="#eeeeee"
                android:backgroundTint="#EE5111FF"
                android:background="@drawable/button_bg"/>
        </LinearLayout>


    </RelativeLayout>
</layout>