<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="1dp"
        app:cardCornerRadius="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/pImage"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img3"
                android:contentDescription="@string/pimage_imageview" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/pName"
                    android:layout_width="match_parent"
                    android:text="@string/product_name"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="#111"
                    android:maxLines="1"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="0.5"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:id="@+id/pDesc"
                    android:layout_width="match_parent"
                    android:text="@string/product_description"
                    android:textSize="12sp"
                    android:textColor="#B9B9B9"
                    android:maxLines="2"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="end|bottom"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rs_250"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/nunito_bold"
                        android:textColor="#111"
                        android:maxLines="1"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/likeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="11sp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/from_history" />

                    <ImageView
                        android:id="@+id/shareBtn"
                        android:layout_width="30dp"
                        android:backgroundTint="#FF6200EE"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/share"
                        android:contentDescription="@string/sharebtn_imageview" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>